--- a/styles/inline.css
+++ b/styles/inline.css
@@ -28,8 +28,21 @@ body {
 
 .form input,
 .form label {
-    color: black;
-    background-color: whitesmoke;
+    color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
+}
+
+form input,
+form label {
+    color: rgb(255, 255, 255);
+}
+
+input:invalid+span::after {
+    content: '✖';
+}
+
+input:valid+span::after {
+    content: '✓';
 }
 
 .table {
