Updated with datatables and css

--- a/styles/inline.css
+++ b/styles/inline.css
@@ -26,6 +26,29 @@ body {
     color: black;
 }
 
+.modal-backdrop {
+    background-color: yellow;
+}
+
+table.table-fit {
+    width: auto !important;
+    table-layout: auto !important;
+}
+
+table.table-fit thead th,
+table.table-fit tfoot th {
+    width: auto !important;
+}
+
+table.table-fit tbody td,
+table.table-fit tfoot td {
+    width: auto !important;
+}
+
+#Modal-View-Search table {
+    color: rgb(0, 0, 0);
+}
+
 .form input,
 .form label {
     color: rgb(255, 255, 255);
